# ColorConstancy

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  ColorConstancy.py  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
color_constancy/: __init__.py  core.py  types.py
examples/: basic_usage.py
examples/images/: README.md
tests/: __init__.py  test_core.py
